# MedAuthorTrace

./: README.md
back-end-fetcher/: pubmed_papers_biotech_startup.csv  pubmed_papers_drug_development_industry.csv  pubmed_papers_healthcare_AI.csv  pubmed_papers_pharmaceutical_company.csv  pubmed_papers_veterinary_medicine.csv  pyproject.toml
back-end-fetcher/src/: __init__.py  fetcher.py  pubmed_papers.csv  utils.py
back-end-fetcher/src/get_paper_list/: cli.py  fetcher.py  pubmed_papers_biotech_company.csv  pubmed_papers_clinical_research_organization.csv  pubmed_papers_drug_development_industry.csv  pubmed_papers_medical_device_company.csv  pubmed_papers_pharmaceutical_company.csv
back-end-fetcher/src/results/: pubmed_papers_biotech_company.csv  pubmed_papers_clinical_research_organization.csv  pubmed_papers_medical_device_company.csv
back-end-fetcher/tests/: test_fetcher.py
