[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with pharma/biotech affiliations"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "get-paper-list", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"


[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"